--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="An application to help with your search for great makeup"
     />
 
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:600%7CLato&display=swap" rel="stylesheet">
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
-    <title>React App</title>
+    <title>MakeApp</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
